# QGenderSelector

./: CMakeLists.txt  LICENSE  QGenderSelector.cc  QGenderSelector.h  QGenderSelectorDesignerFactory.cc  QGenderSelectorDesignerFactory.h  demo.cc
QGenderSelector4/: CMakeLists.txt
QGenderSelector5/: CMakeLists.txt
include/: QGenderSelector.h  QGenderSelectorDesignerFactory.h
src/: QGenderSelector.qrc  QGenderSelectorDesignerFactory.cc
